# mmalignments

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: FASTQ_QC_USAGE_GUIDE.md  QC_USAGE_GUIDE.md
src/mmalignments/: __init__.py  main.py
src/mmalignments/api/: __init__.py
src/mmalignments/core/: __init__.py  bed.py  bwamem2.py  callable_regions.py  mutation_calling.py  preprocessing.py
src/mmalignments/jobs/: __init__.py  aligner_jobs.py
src/mmalignments/models/: __init__.py  data.py  elements.py  executor.py  externals.py  parameters.py  qc_metrics.py  registry.py  resources.py  sample.py  status.py  status2.py  tags.py  tasks.py  variant.py
src/mmalignments/models/aligners/: __init__.py  bcftools.py  bedtools.json  bedtools.py  bwamem2.json  bwamem2.py  picard.txt  samtools.json  samtools.py
src/mmalignments/models/callers/: __init__.py  gatk.json  gatk.py
src/mmalignments/models/qc/: __init__.py  fastp.json  fastp.py  fastq.txt  fastqc.json  fastqc.py  mosdepth.json  mosdepth.py  multiqc.json  multiqc.py  parsers.py  qc.py
src/mmalignments/models/reports/: report.py
src/mmalignments/services/: __init__.py  annotation.py  errors.py  io.py  qc.py  reporting.py  time.py
src/mmalignments/utils/: __init__.py  bed_utils.py
tests/core/: test_externals.py  test_gatk.py  test_qc.py  test_qc_mosdepth.py  test_samtools.py
