[tool.poetry]
name = "mmalignments"
version = "0.1.0"
description = "A package for string alignment needs."
authors = ["Marco Mernberger <marco.mernberger@gmail.com>"]
readme = "README.md"
packages = [
  { include = "mmalignments", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.14"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.1"
typer = { version = "^0.12.0", extras = ["all"] }

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.6.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
sphinx = "^7.0.0"
myst-parser = "^3.0.0"
furo = "^2024.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# --- Black ---
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = "\\.pyi?$"

# --- Ruff ---
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88  # Same as Black.
indent-width = 4  # 4 Spaces

# Assume Python 3.11, 312
#target-version = ["py311", "py312"]
src = ["src", "tests"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203", "E501"]  # Black regelt line-length

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"
# This only has an effect when the `docstring-code-format` setting is
# enabled.


[tool.ruff.isort]
known-first-party = ["mmalignments"]


# --- pytest ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

# --- mypy ---
[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
plugins = []
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

# --- coverage (optional, nice for CI) ---
[tool.coverage.run]
source = ["mmalignments"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
