[project]
name = "mmalignments"
version = "0.1.0"
description = "A package for Exome mutation analysis."
authors = [
    { name = "Marco Mernberger", email = "marco.mernberger@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "typer[all]>=0.12.0",
]
[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "sphinx>=7.0.0",
    "myst-parser>=3.0.0",
    "furo>=2024.1.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmalignments"]

[tool.hatch.build]
sources = ["src"]

[tool.uv]
dev-dependencies = [
    "black>=24.4.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "sphinx>=7.0.0",
    "myst-parser>=3.0.0",
    "furo>=2024.1.0",
    "ipykernel>=6.29.0",
]

# --- Black ---
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = "\\.pyi?$"

# --- Ruff ---
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203", "E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.isort]
known-first-party = ["mmalignments"]

# --- pytest ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

# --- mypy ---
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
plugins = []
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

# --- coverage ---
[tool.coverage.run]
source = ["mmalignments"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true